# ChangeLog for sys-libs/lib-compat-loki
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/lib-compat-loki/ChangeLog,v 1.5 2007/01/11 14:54:05 wolf31o2 Exp $

  11 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml,
  -lib-compat-loki-0.1.ebuild, lib-compat-loki-0.2.ebuild:
  Remove preplib for bug #102297 and clean up older versions.

  20 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  lib-compat-loki-0.2.ebuild:
  Marking stable on amd64 for games-action/descent3 stabilization.

  16 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  lib-compat-loki-0.2.ebuild:
  Added dependencies on lib-compat for x86 and emul-linux-x86-compat for amd64
  and closing bug #119021.

*lib-compat-loki-0.2 (12 Nov 2005)

  12 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +lib-compat-loki-0.2.ebuild:
  Added libsmpeg compiled against older glibc for descent3 compatibility on
  amd64.

*lib-compat-loki-0.1 (22 Feb 2005)

  22 Feb 2005; Chris Gianelloni <wolf31o2@gentoo.org> +metadata.xml,
  +lib-compat-loki-0.1.ebuild:
  Initial import. Ebuild by Alex Linke <incubation.11@freenet.de> and
  submitted to bug #71044.
