@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST lib-compat-loki-0.2.tar.bz2 1441552 RMD160 e09ec2dc194c792b247cdc339881d9a2f4545e3d SHA1 14c71b7e61cccda50795e50e67e6668a071ba56f SHA256 112b916c21f1a47d257aff721cda10a79e40efe4b75f71d696b70a0036f12234
-EBUILD lib-compat-loki-0.2.ebuild 1138 RMD160 5c10e10c06cf0778924b31b7b6a2dfa2a7a160a9 SHA1 eee41a88968eee18fe65c6d1955776e45ba88a51 SHA256 273e36eceffda74db947340f4b9bdae22d42eb2284125833612b4f3290e20369
-MD5 3682dec74a9f68e49a6fc0d93299b718 lib-compat-loki-0.2.ebuild 1138
-RMD160 5c10e10c06cf0778924b31b7b6a2dfa2a7a160a9 lib-compat-loki-0.2.ebuild 1138
-SHA256 273e36eceffda74db947340f4b9bdae22d42eb2284125833612b4f3290e20369 lib-compat-loki-0.2.ebuild 1138
-MISC ChangeLog 1197 RMD160 51b9b22127be6cc4d43848ef043c1d3e3ceb7c06 SHA1 24f6ab12463b5dae81d55f71f05b9b74efcda446 SHA256 7e033803975d35772cdd2beafbc442150f939d5faf255584c8fc5cebab6e8b14
-MD5 a7085c0120afb2b041ccd29121cefa50 ChangeLog 1197
-RMD160 51b9b22127be6cc4d43848ef043c1d3e3ceb7c06 ChangeLog 1197
-SHA256 7e033803975d35772cdd2beafbc442150f939d5faf255584c8fc5cebab6e8b14 ChangeLog 1197
+EBUILD lib-compat-loki-0.2.ebuild 1175 RMD160 0263219f9a1ad775b4119d1af8d47b5a28c3fde8 SHA1 6844b7fb341fcf08bab3d926b22b88b5205946a5 SHA256 a67e6a6d113032f31a4696b3819bd07609161306bf5a5da28b6a27124e3d15fd
+MD5 9e55624d05b45343c4f549c26a988687 lib-compat-loki-0.2.ebuild 1175
+RMD160 0263219f9a1ad775b4119d1af8d47b5a28c3fde8 lib-compat-loki-0.2.ebuild 1175
+SHA256 a67e6a6d113032f31a4696b3819bd07609161306bf5a5da28b6a27124e3d15fd lib-compat-loki-0.2.ebuild 1175
+MISC ChangeLog 1418 RMD160 ee598232070bf8879d616964e287ae804660838c SHA1 65c3e211f56fccb8ddd8d0e6d169d7f31116d825 SHA256 9058eee536d84889432b235d0a3cf1afa8f4f5dd53961fc1cb65fedc0bffb459
+MD5 94642091435cd7a144d3492b63305cf8 ChangeLog 1418
+RMD160 ee598232070bf8879d616964e287ae804660838c ChangeLog 1418
+SHA256 9058eee536d84889432b235d0a3cf1afa8f4f5dd53961fc1cb65fedc0bffb459 ChangeLog 1418
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
@@ -18,9 +18,9 @@ MD5 907555dc193d92e7264027ec6c45adaf files/digest-lib-compat-loki-0.2 265
 RMD160 edc1091ae5f20d5ac9f25311cda8df631f16546c files/digest-lib-compat-loki-0.2 265
 SHA256 7cc59aae73f0e9279dc71578912ab58420a032718111aa35c0bddec5b3524436 files/digest-lib-compat-loki-0.2 265
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v2.0.5 (GNU/Linux)
 
-iD8DBQFFpk+UkT4lNIS36YERAoSzAJ9n6xr12qrtVClCcdxzgYj9H1aoCgCdE2FA
-RnOD7ArEqJWuGcQYHgqQ8bg=
-=3rd6
+iD8DBQFGy3aFkT4lNIS36YERAqDeAJ9RL6ACau1eEg13i8nhWWGZnqVwjwCfccq9
+5HN6a92ayiq6i6z60G/qd80=
+=V1lP
 -----END PGP SIGNATURE-----
