@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/lib-compat-loki
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/lib-compat-loki/ChangeLog,v 1.5 2007/01/11 14:54:05 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/lib-compat-loki/ChangeLog,v 1.6 2007/08/21 23:34:28 wolf31o2 Exp $
+
+  21 Aug 2007; Chris Gianelloni <wolf31o2@gentoo.org>
+  lib-compat-loki-0.2.ebuild:
+  Added a dependency on the sdl emulation libs. Thanks to Simon Cooper
+  <thecoop@runbox.com> for pointing it out. Closing bug #188720.
 
   11 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml,
   -lib-compat-loki-0.1.ebuild, lib-compat-loki-0.2.ebuild:
